@@ -378,3 +378,11 @@ class TestWith(object):
         ''')
         assert [x.strip() for x in tmpl.render(a=1, b=2).splitlines()] \
             == ['42 = 23', '1 = 2']
+
+    def test_with_argument_scoping(self, env):
+        tmpl = env.from_string('''\
+        {%- with a=1, b=2, c=b, d=e, e=5 -%}
+            {{ a }}|{{ b }}|{{ c }}|{{ d }}|{{ e }}
+        {%- endwith -%}
+        ''')
+        assert tmpl.render(b=3, e=4) == '1|2|3|4|5'
